# cpp-yandex-course

./: .gitignore  expected_earch_results.txt  meson.build  queries.txt  search_results_output.txt
cross/: clang.txt
info/: info.txt  потоковые манипуляторы.txt
my-works/: firsts_and_last_names_2.cpp  working_with_files.cpp
red_works/: 1_4_bad_macros.cpp  1_4_uniq_id.cpp
src/: Solution.cpp  booking.h  collected_data.txt  condition_parser.cpp  database.cpp  database.h  date.cpp  date.h  dummy.h  game_object.h  geo2d.cpp  graph.h  ini.h  input.txt  json.cpp  json.h  json_printer.cpp  json_printer.h  long.json  main.cpp  meson.build  node.cpp  node.h  old_but_pos.txt  old_edges.txt  paginator.h  parse.cpp  parse.h  render.cpp  render.h  render_example_4.json  render_example_expect_4.txt  render_types.h  router.h  search_server.cpp  search_server.h  simple_vector.h  sniffed.json  stats_aggregator.cpp  svg.cpp  (+19 more)
src/profile/: profile.h
src/tests/: test_asserts.h  test_runner.cpp  test_runner.h
txt/: render_example_expect_3.txt
white_works/: Incognizable.cpp  equation.cpp  firsts_and_last_names_3.cpp  read_and_output_csv_table.cpp  revertable_function.cpp  revertable_function_extended.cpp  string.cpp
works/black_works/: 1_2_san_bad_domens.cpp  1_2_san_personal_budjet.cpp  (+2 more)
yellow_works/: DemographicIndicators.cpp  ExplicitDate.cpp  FindNearestElement.cpp  GroupStringByPrefix.cpp  MergeSort.cpp  MergeSort2.cpp  Permutations.cpp  RemoveDublicates.cpp  all_in_sqr.cpp  average_temp_2.cpp  base_of_regions.cpp  bus_and_stops_decomposition.cpp  findGreaterElements.cpp  reference_to_element.cpp  test_GetDistinctRealRootCount.cpp  test_rational.cpp  unit_test_framework.cpp
(+136 files in other folders)
